--- a/patterns/templates/patterns/bubble5.html
+++ b/patterns/templates/patterns/bubble5.html
@@ -33,7 +33,7 @@
         const n = 5;
 
         function next() {
-            if(clicked < 3) {
+            if(clicked < 4) {
                 startdate = new Date();
                 starttimer = startdate.getTime();
 
@@ -85,6 +85,9 @@
                     .data(data)
                     .enter()
                     .append("circle")
+                    .attr("id" ,function (d){
+                        return d.name
+                    })
                     .attr("r", function (d) {
                         return size(d.group)
                     })
@@ -145,9 +148,29 @@
                     d.fy = null;
                 }
 
-                svg.on('click', click);
+                let csvgA = document.querySelector("#A");
+                let csvgB = document.querySelector("#B");
+                let csvgC = document.querySelector("#C");
+                let csvgD = document.querySelector("#D");
+                let csvgE = document.querySelector("#E");
+                csvgA.addEventListener('click',click);
+                csvgB.addEventListener('click',click);
+                csvgC.addEventListener('click',click);
+                csvgD.addEventListener('click',click);
+                csvgE.addEventListener('click',click);
 
                 function click(d) {
+                    var largest = 0;
+                    console.log(arr);
+                    for(var i=0; i<arr.length; i++){
+                        temp = arr[i];
+                        if(temp > largest)
+                            largest = temp;
+                        //console.log('Circle that was picked is: '+color(d.target.id));
+                    }
+                    answer = size(d.target.id);
+                    //console.log('Circle that was picked is: '+answer);
+
                     enddate = new Date();
                     endtimer = enddate.getTime();
 
@@ -157,34 +180,36 @@
                     sec = Math.floor((difftime % (1000 * 60)) / 1000);
 
                     d3.select('body').append('p').text('Ow, that hurt! \n It took you: ' + Math.abs(sec) + ' seconds and ' + Math.abs(msdiff) + ' ms.');
+
+                    clicked = clicked + 1;
+                    d3.select('body').append('p').text('Button was clicked: '+clicked);
+
+                    var temp;
+                    var largest = 0;
+                    for(var i=0; i<arr.length; i++){
+                        temp = arr[i];
+                        if(temp > largest)
+                            largest = temp;
+                    }
+
+                    fetch("{% url 'patterns-bubble5' %}", {
+                        //header("Access-Control-Allow-Origin: *")
+                        method: 'post',
+                        body: JSON.stringify({
+                            'time': Math.abs(msdiff),
+                            'repetition':clicked,
+                            'values':arr,
+                            'correctanswer':largest
+                        }),
+                        headers: {'X-CSRFToken':document.cookie.split('=')[1]}
+                    }).then((response)=>{console.log(document.cookie.split('=')[1])})
+                next();
                 }
             }else {
-                d3.select("svg").remove();
-                d3.select('body').append('h1').text('You have finished your 3 trials. Please move on.');
+                window.location.replace("{% url 'patterns-bubbleChart9' %}");
+                //d3.select("svg").remove();
+                //d3.select('body').append('h1').text('You have finished your 3 trials. Please move on.');
             }
-
-        }
-         function save(){
-            clicked = clicked + 1;
-            d3.select('body').append('p').text('Button was clicked: '+clicked);
-
-            var temp;
-            var largest = 0;
-            for(var i=0; i<arr.length; i++){
-                temp = arr[i];
-                if(temp > largest)
-                    largest = temp;
-            }
-            fetch("{% url 'patterns-bubble5' %}", {
-                    method: 'post',
-                    body: JSON.stringify({
-                        'time': Math.abs(msdiff),
-                        'repetition':clicked,
-                        'values':arr,
-                        'correctanswer':largest
-                    }),
-                    headers: {'X-CSRFToken':document.cookie.split('=')[1]}
-            }).then((response)=>{console.log(document.cookie.split('=')[1])})
         }
     </script>
 {% endblock content %}
